--- a/p8105_hw2_lh3109.Rmd
+++ b/p8105_hw2_lh3109.Rmd
@@ -172,7 +172,8 @@ popular_male_df =
   #group the names by year
   group_by(year_of_birth) %>% 
   #extract the rows with highest counts of a name
-  slice(which.max(count))
+  slice(which.max(count)) %>% 
+  knitr::kable()
 
 
 nonhis_m_2016_df = 
